--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+
+{% load staticfiles %} 
 <html>
 <head>
 <title>Rango</title>
@@ -10,6 +13,9 @@ hey there partner! <br />
 </div>
 <div>
 <a href="/rango/about/">About</a><br />
+<img src="{% static 'images/rango.jpg' %}"
+alt="Picture of Rango" /> 
 </div>
 </body>
 </html>
+
