added most viewed pages and passed tests

--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -21,6 +21,7 @@
         {% else %}
             The specified category does not exist.
         {% endif %}
+        <p><a href="/rango/">Homepage</a></p>
     </div>
 </body>
 
